<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/root"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.anna.myapplication.MainActivity">

    <Button
        android:id="@+id/send_email"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/send_email"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toTopOf="@+id/open_profile"
        android:layout_marginBottom="16dp"
        android:textColor="@color/colorPurple" />

    <Button
        android:id="@+id/open_profile"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/open_profile"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:textColor="@color/colorPurple" />

    <Button
        android:id="@+id/training_thread"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/training_thread"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/open_profile"
        android:layout_marginTop="16dp"
        android:textColor="@color/colorPurple" />

</android.support.constraint.ConstraintLayout>
