<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".PersonDetailActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/person_image"
                android:layout_width="wrap_content"
                android:layout_height="150dp"
                android:src="@drawable/zootopia_fox"
                android:scaleType="centerInside"
                android:contentDescription="@string/person_image"
                android:background="@color/colorGreen"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="16dp" />

            <TextView
                android:id="@+id/person_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/person_name"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="8dp"
                android:textColor="@color/colorPurple" />

            <TextView
                android:id="@+id/person_birthday"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/person_birthday"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="8dp"
                android:textColor="@color/colorBlue" />

        </LinearLayout>
        <ScrollView
            android:id="@+id/scroll_view"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:layout_marginBottom="16dp"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp"
            android:orientation="vertical" >

            <EditText
                android:id="@+id/person_description"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/person_description"
                android:inputType="textMultiLine"
                android:scrollbars="vertical" />

        </ScrollView>
    </LinearLayout>
</android.support.constraint.ConstraintLayout>